<resources>
    <string name="app_name">projectakhir</string>
    <string name="tagline">Healty anywhere you go!</string>
    <string name="email_hint"><font size="15">Email</font></string>
    <string name="username_hint"><font size="15">Username</font></string>
    <string name="password_hint"><font size="15">Password</font></string>
    <string name="register">Don’t have an account? <b>Register</b></string>
    <string name="login">Have an account? <b>Login</b></string>
    <string name="Change_photo">Change Photo</string>
    <string name="dummy_article">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>